--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,12 @@
   "name": "fitverse-backend",
   "version": "1.0.0",
   "description": "FitVerse Backend API",
+  "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "NODE_OPTIONS='--import tsx' node --watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/index.ts",
+    "start": "node dist/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:migrate:deploy": "prisma migrate deploy",
@@ -15,25 +16,38 @@
     "create-admin": "tsx src/scripts/create-admin.ts",
     "migrate:from-supabase": "tsx src/scripts/migrate-from-supabase.ts",
     "validate:migration": "tsx src/scripts/validate-migration.ts",
-    "test": "jest --config jest.config.js",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test": "NODE_OPTIONS='--loader tsx' jest --config jest.config.js",
+    "test:watch": "NODE_OPTIONS='--loader tsx' jest --watch",
+    "test:coverage": "NODE_OPTIONS='--loader tsx' jest --coverage",
+    "lint": "eslint . --ext .ts,.tsx",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\""
   },
-  "keywords": ["gym", "management", "api"],
+  "keywords": [
+    "gym",
+    "management",
+    "api"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^6.1.0",
+    "@prisma/client": "^6.17.1",
     "@supabase/supabase-js": "^2.39.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-rate-limit": "^7.5.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "uuid": "^11.0.5",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "swagger-ui-express": "^5.0.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3",
+    "uuid": "^11.1.0",
+    "winston": "^3.13.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
@@ -45,13 +59,22 @@
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
     "@types/nodemailer": "^6.4.14",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^6.0.2",
-    "@types/uuid": "^10.0.0",
+    "@types/swagger-ui-express": "^4.1.7",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "prisma": "^6.1.0",
+    "prettier": "^3.2.5",
+    "prisma": "^6.17.1",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
-    "tsx": "^4.19.2",
-    "typescript": "^5.7.3"
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2"
   }
 }
