--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^17.2.3",
     "embla-carousel-react": "^8.3.0",
     "express-rate-limit": "^8.1.0",
     "framer-motion": "^12.23.12",
@@ -62,6 +63,7 @@
     "next-themes": "^0.3.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "pg": "^8.16.3",
     "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
