--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 # Backend API Configuration
 VITE_BACKEND_URL=http://localhost:3001
 
-# Supabase Configuration (Legacy - will be removed)
-VITE_SUPABASE_URL=your-supabase-url
-VITE_SUPABASE_ANON_KEY=your-supabase-anon-key
+# JWT Configuration
+JWT_SECRET=your-jwt-secret-key
+JWT_EXPIRES_IN=24h
+
+# Database Configuration (PostgreSQL)
+DATABASE_URL=postgresql://user:password@localhost:5432/your-database-name
