--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,6 @@
     "prisma:studio": "prisma studio",
     "seed": "tsx src/scripts/seed-test-data.ts",
     "create-admin": "tsx src/scripts/create-admin.ts",
-    "migrate:from-supabase": "tsx src/scripts/migrate-from-supabase.ts",
-    "validate:migration": "tsx src/scripts/validate-migration.ts",
     "test": "NODE_OPTIONS='--loader tsx' jest --config jest.config.js",
     "test:watch": "NODE_OPTIONS='--loader tsx' jest --watch",
     "test:coverage": "NODE_OPTIONS='--loader tsx' jest --coverage",
@@ -31,7 +29,6 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.17.1",
-    "@supabase/supabase-js": "^2.39.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -39,6 +36,7 @@
     "express-rate-limit": "^7.5.0",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
@@ -56,6 +54,7 @@
     "@types/express": "^5.0.0",
     "@types/jest": "^29.5.11",
     "@types/jsonwebtoken": "^9.0.7",
+    "@types/lodash": "^4.17.20",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.10.5",
     "@types/nodemailer": "^6.4.14",
