--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "prisma:studio": "prisma studio",
     "seed": "tsx src/scripts/seed-test-data.ts",
     "create-admin": "tsx src/scripts/create-admin.ts",
+    "reset-db": "tsx scripts/reset-and-setup.ts",
     "test": "NODE_OPTIONS='--loader tsx' jest --config jest.config.js",
     "test:watch": "NODE_OPTIONS='--loader tsx' jest --watch",
     "test:coverage": "NODE_OPTIONS='--loader tsx' jest --coverage",
@@ -29,6 +30,7 @@
   "license": "MIT",
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -49,6 +51,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
