--- a/backend/package.json
+++ b/backend/package.json
@@ -44,7 +44,6 @@
     "passport-jwt": "^4.0.1",
     "swagger-ui-express": "^5.0.1",
     "tsx": "^4.7.1",
-    "typescript": "^5.3.3",
     "uuid": "^11.1.0",
     "winston": "^3.13.0",
     "zod": "^3.24.1"
@@ -57,7 +56,7 @@
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.20",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.5",
+    "@types/node": "^22.18.12",
     "@types/nodemailer": "^6.4.14",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^3.0.13",
@@ -75,6 +74,7 @@
     "prisma": "^6.17.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.2",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
