--- a/backend/package.json
+++ b/backend/package.json
@@ -41,7 +41,10 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "qrcode": "^1.5.4",
+    "speakeasy": "^2.0.0",
     "swagger-ui-express": "^5.0.1",
     "tsx": "^4.7.1",
     "uuid": "^11.1.0",
