--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,10 +21,14 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/types/**/*.d.ts"],
   "exclude": ["node_modules", "dist"],
   "ts-node": {
     "esm": true,
     "experimentalSpecifierResolution": "node"
-  }
+  },
+  "typeRoots": [
+    "./node_modules/@types",
+    "./src/types"
+  ]
 }
