--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # Backend API Configuration
+VITE_API_URL=http://localhost:3001/api/v1
 VITE_BACKEND_URL=http://localhost:3001
 
 # JWT Configuration
