--- a/backend/.env
+++ b/backend/.env
@@ -13,7 +13,7 @@ NODE_ENV="development"
 FRONTEND_URL="http://localhost:8080"
 
 # CORS
-ALLOWED_ORIGINS="http://localhost:8080"
+ALLOWED_ORIGINS="http://localhost:5173,http://localhost:8080"
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
